2003-11-13  Stipe Tolj  <tolj@wapme-systems.de>
    * gw/bb_smscconn.c: typo fix. no logic change.
    * test/fakesmsc.c: added -r option to allow randomization of source and/or
      receiver numbers while passing MO messages to smsc_fake.

2003-11-12  Alexander Malysh  <a.malysh@centrium.de>
    * gw/smsc/smsc_at.c: applied (in slightly modified version) patch that
      fixes non-blocking write to modem device. Thanks a lot to:
      Yulianto Z <sehari24jam@yahoo.com> for provided patch.
      Msg-Id: <1068643285.4052.58.camel@pandora.daehsan.com>

2003-11-12  Stipe Tolj  <tolj@wapme-systems.de>
    * gwlib/http.c: fixes partially BUG#99 when the HTTP servers sends an
      'Authorization' header without real values in it. This would cause
      previously a PANIC while accessing list_get() on an empty list.
      Thanks to the bug reported for pointing this out.
    * wap/wsp_strings.c: making the WSP mapping output a bit more compacter.

2003-11-12  Alexander Malysh  <a.malysh@centrium.de>
    * gwlib/protected.c: do not double check errors from reentrant gethostbyname
      functions. This breaks resolution of the hostname for old glibc (e.g. Redhat 7.2).

2003-11-11  Stipe Tolj  <tolj@wapme-systems.de>
    * gwlib/conn.c: enable non-blocking mode for SSL connections via read/write
      BIO and partial writing and buffer moving in ssl context. this is needed if 
      we use non-blocking mode otherwise openssl doesn't simulate write(2) 
      behaviour. Thanks to Alex for providing the patch
      [Msg-ID: <200311071927.27616.a.malysh@centrium.de>]

2003-11-11  Stipe Tolj  <tolj@wapme-systems.de>
    * gw/bearerbox.c: remove "no-op" debug output.
    * gw/wap_push_[ppg|pap_mime].c: various Ocstr call improvements for the PPG
      handling, MIME parsing routines.
    * gwlib/octstr.[ch]: added function octstr_case_nsearch() to allow searching
      for octstr in a specific range.
      Patch posted by Aarno. Thanks a lot.